--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,15 @@
     "Title": "Some Thoughts on the Future of the United States Government by Admiral H. G. Rickover, USN"
   },
   {
+    "file_pdf": "https://rickover-corpus.s3.us-east-1.amazonaws.com/Economics+of+Military+Procurement+Part+II.pdf",
+    "file_OCR": "https://rickover-corpus.s3.us-east-1.amazonaws.com/Economics+of+Military+Procurement+Part+II.txt",
+    "Summary": "Admiral Rickover's testimony before the Joint Economic Committee’s Subcommittee on Economy in Government on November 14, 1968. In it, Rickover delivers a searing critique of U.S. defense procurement practices, identifying three core problems: outdated and loophole-ridden procurement laws, the undue influence of industry on defense policy, and Congress’s failure to assert oversight. Drawing on decades of experience leading the Naval Nuclear Propulsion Program, Rickover details specific cases of overcharging, profit inflation, cost misallocation, and regulatory evasion. He advocates for comprehensive reform, including uniform accounting standards, tighter cost controls, and reduced contractor influence, warning that unchecked profiteering undermines both fiscal responsibility and national defense.",
+    "Source": "https://www.jec.senate.gov/reports/90th%20Congress/Economics%20of%20Military%20Procurement%20Part%20II%20(432).pdf",
+    "Year": 1968,
+    "Type": "Congressional Testimony",
+    "Title": "Economics of Military Procurement, Part II"
+  },
+  {
     "file_pdf": "https://rickover-corpus.s3.us-east-1.amazonaws.com/Some+Thoughts+on+the+Presidency.pdf",
     "file_OCR": "https://rickover-corpus.s3.us-east-1.amazonaws.com/Some+Thoughts+on+the+Presidency.txt",
     "Summary": "In this insightful reflection on the American Presidency, Admiral Hyman Rickover, who served under twelve Presidents from Truman to Reagan, highlights the profound isolation and challenges faced by a President, underscoring the critical need for candid, goal-oriented subordinates and diverse counsel, citing figures like Machiavelli, General Marshall, and Churchill. Rickover critiques the pervasive influence of media (post-1974), demanding total disclosure and hindering candid discussion, and warns against the sway of big business and the short-sighted nature of polls. He also draws attention to long-standing issues like the energy crisis, first warned of in the 1952 \"Resources for Freedom\" report, and the increasing difficulty of the Presidency due to Congressional gridlock. Ultimately, Rickover advocates for the President to act as a moral leader focused on historical legacy rather than popularity or a second term, emphasizing adherence to principle and conscience over political expediency, and reminding readers of the foundational principles from the U.S. Constitution's Preamble.",
